@@ -3,50 +3,34 @@ package com.example.demo;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
-import org.springframework.security.crypto.password.NoOpPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class SecurityConfig {
 
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        // Necesario para que acepte "12345" tal cual está en la base de datos
-        return NoOpPasswordEncoder.getInstance();
-    }
-
-    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .csrf(csrf -> csrf.disable()) // Permite peticiones POST
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Arregla el error de CORS
-            .headers(headers -> headers
-                .contentSecurityPolicy(csp -> csp
-                    // Permite conectar con Render y usar tus scripts internos
-                    .policyDirectives("default-src 'self'; connect-src 'self' https://backend-agricola.onrender.com; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline';"))
-            )
+            .csrf(csrf -> csrf.disable()) // Deshabilitado para permitir POST desde el HTML
+            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // Permite acceso externo
             .authorizeHttpRequests(auth -> auth
-                .requestMatchers("/", "/index.html", "/api/usuarios/login").permitAll()
-                .anyRequest().authenticated()
+                .anyRequest().permitAll() // Permite acceso total para pruebas
             )
-            .httpBasic(basic -> {}); // Activa la autenticación para el AUTH_HEADER de JS
-
+            .headers(headers -> headers.frameOptions(frame -> frame.disable())); // Permite visualización de frames
+        
         return http.build();
     }
 
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(Arrays.asList("*")); // Permite acceso desde tu sitio de Render
-        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
-        config.setAllowCredentials(false);
-        
+        config.setAllowedOrigins(List.of("*"));
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
